--- a/config/database.yml
+++ b/config/database.yml
@@ -48,7 +48,9 @@ test:
 #     url: <%= ENV['DATABASE_URL'] %>
 #
 production:
-  <<: *default
+  adapter: postgresql
+  encoding: unicode
+  pool: 5
   database: <%= ENV['FDB_NAME'] %>
   username: <%= ENV['FDB_USER'] %>
     password: <%= ENV['fdb_password'] %>
